// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.gitsync;

option java_multiple_files = true;

import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_detail.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_scope_info.proto";
import "980-commons/src/main/proto/io/harness/security/user_principal.proto";

service FullSyncService {
  rpc getEntitiesForFullSync(ScopeDetails) returns (FileChanges);
  rpc performEntitySync(FullSyncRequest) returns (FullSyncResponse);
}

message FileChanges {
  repeated FileChange file_changes = 1;
}

message FileChange {
  string file_path = 1;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO entity_detail = 2;
}

message ScopeDetails {
  io.harness.eventsframework.schemas.entity.EntityScopeInfo entity_scope = 1;
  map<string, string> log_context = 2;
}

message FullSyncFileResponse {
  bool success = 1;
  string error_msg = 2;
  string file_path = 3;
}

message FullSyncRequest {
  repeated FullSyncChangeSet file_changes = 1;
  map<string, string> log_context = 2;
}

message FullSyncResponse {
  repeated FullSyncFileResponse file_response = 1;
}

message FullSyncChangeSet {
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO entity_detail = 1;
  string file_path = 2;
  string folder_path = 3;
  string yaml_git_config_identifier = 4;
  string branch_name = 5;
  string account_identifier = 7;
  string commit_message = 8;
}

message FullSyncEventRequest {
  io.harness.eventsframework.schemas.entity.EntityScopeInfo git_config_scope = 1;
  bool createPr = 2;
  string branch = 3;
  string target_branch = 4;
  bool isNewBranch = 5;
  string baseBranch = 6;
  string prTitle = 7;
  string rootFolder = 8;
  io.harness.security.UserPrincipal user_principal = 9;
}